--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mpage-developer-component-template",
+  "name": "fhir-week-1",
   "version": "0.0.0",
   "scripts": {
     "serve": "ng serve --extra-webpack-config webpack.partial.js -o",
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^20.0.4",
     "@angular/platform-browser-dynamic": "^20.0.4",
     "@angular/router": "^20.0.4",
-    "@clinicaloffice/mpage-developer": "^0.0.11",
+    "@clinicaloffice/mpage-developer": "latest",
     "@types/luxon": "^3.6.2",
     "concat": "^1.0.3",
     "fast-sort": "^3.4.1",
